        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4
      % Version 25
      _ 2016-xx-xx
      * Toasts when sending commands
      * Avoid ANR at start when calling rest
      * Avoid white page on start instead of dialog cache engine
      * Re-Close #71 display color in sensor for DT_ColorRGBHexa
      * Close #126 for Breezy in weather widget
      * Close #123 unknown display instead of value off if no value from rest
      * #33 finally really solved
      * #122 Start working on Metrics
      * New widget including openstreetmap for current position when opening widget
      * minify and shrink resources (3.8Mo>2.9Mo)
      * #109 Slider bar for graph size in preference (bug in lib for max value)
      * Close #99 Handle new device created/modified when offline
      * Start working on #19
      * Close #120 Adding an ANR catch lib
      * Close #105 statistics of server exchange are back
      * Correct widget selector for DT_HVACFan
      * Sort sensor and commands at sync by sensor_id or command_id for 0.5
      * Still more translation #38 for sensors and commands
      % Version 24
      _ 2016-10-15
      ! Important do not hesitate to use ACRA crash report to help developer correct those.
      * #37 handle widget not existing
      * #38 more sensor/command types in translation
      * #102 Adding method to read domogik QRCODE configuration
      * #19 start in a specific area (not yet finished)
      * Close #118 Add ACRA crash reports feedback by mail
      * Do not open history view if it is empty
      * #37 Widget_list for specific datatype (sensor and command)
      * Close #116 Values saved from datatype for use in Widget_list
      * Close #115 History for boolean widget with translation too
      * Update zeromq.jeromq to version 0.3.6
      * Correct some bugs (sync progression, start in area crash on back)