@@ -25,12 +25,10 @@
 
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/Main_ScrollView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@drawable/background">
-        android:id="@+id/ScrollView01"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
         <!-- body -->
         <LinearLayout
             android:id="@+id/home_container"
