@@ -26,6 +26,7 @@
       * Avoid ANR at start when calling rest
       * Avoid white page on start instead of dialog cache engine
       * Re-Close #71 display color in sensor for DT_ColorRGBHexa
+      * Close #128 navigate in place now always start on the top of screen
       * Close #126 for Breezy in weather widget
       * Close #123 unknown display instead of value off if no value from rest
       * #33 finally really solved
